Revert "Experimental Akka HTTP server backend and Reactive Streams integration"